# language-learning-server

./: .env.example  .gitignore  .pylintrc  README.md  pyproject.toml  sql_app.db
.github/workflows/: deploy.yml
src/: config.py  generate_docs.py  main.py  reset_db.py  reset_rag.py  start_server.py  test_assistant.py  test_evaluator.py  test_kokoro.py  test_level_manager.py  test_llm.py  test_ollama.py  test_stt.py  test_translator.py  test_tts.py  test_whisper.py
src/agents/: assistant.py  evaluator.py  translator.py
src/data/language_examples/: airport.json  art_gallery.json  bank.json  coffe_shop.json  computer_repair.json  gym.json  hospital.json  hotel.json  insurance_office.json  library.json  music_store.json  pet_grooming.json  real_estate_agent.json  restaurant.json  school.json  taxi.json  travel_agency.json  wedding_planner.json
src/database/: connection.py  db.py  models.py  schemas.py
src/level_manager/: evaluate.py  train.py
src/level_manager/level_progressor_logs/: evaluations.npz
src/models/: kokoro.py  level_manager.py  whisper.py
src/persistent/: languages.json  situations.json
src/rag/: connection.py  rag_language_retrieval.py
src/rag/language_examples_db/: chroma.sqlite3
src/rag/language_examples_db/0a9d72b1-629a-488e-a67c-eb6d8440302a/: index_metadata.pickle
src/routers/: assistant.py  evaluator.py  items.py  languages.py  learning_session.py  situations.py  stt.py  translator.py  tts.py  user.py  users.py
