[project]
name = "language-learning-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8",
    "faster-whisper>=1.1.1",
    "huggingface-hub>=0.28.1",
    "kokoro>=0.7.6",
    "langchain-core>=0.3.33",
    "langchain-ollama>=0.2.3",
    "pretty-errors>=1.2.25",
    "python-multipart>=0.0.20",
    "torch>=2.6.0",
    "uvicorn>=0.34.0",
]



[tool.mypy]
mypy_path = "src"
