[project]
name = "language-learning-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.2.1",
    "fastapi>=0.115.8",
    "fastapi-pretty-errors>=0.1.1",
    "faster-whisper>=1.1.1",
    "huggingface-hub>=0.28.1",
    "kokoro>=0.7.6",
    "langchain-chroma>=0.2.1",
    "langchain-core>=0.3.33",
    "langchain-ollama>=0.2.3",
    "passlib>=1.7.4",
    "pretty-errors>=1.2.25",
    "pydantic-extra-types>=2.10.2",
    "pydantic[email]>=2.10.6",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.37",
    "torch>=2.6.0",
    "types-passlib>=1.7.7.20241221",
    "uvicorn>=0.34.0",
]



[tool.mypy]
mypy_path = "src"
